--- a/vimb/.config/vimb/config
+++ b/vimb/.config/vimb/config
@@ -13,7 +13,7 @@ nnoremap x :sh! mpv %<CR>
 # vimb behavior
 set hintkeys=fjdksla;
 set download-path=/tmp
-set editor-command=urxvt -e vim %s
+set editor-command=st -e vim %s
 set fontsize=12px
 set history-max-items=99999
 set input-autohide=true
