--- a/vimb/.config/vimb/config
+++ b/vimb/.config/vimb/config
@@ -6,7 +6,7 @@ nnoremap H <C-o>
 nnoremap L <C-i>
 nnoremap b <C-b>
 nnoremap x :sh! mpv %<CR>
-nnoremap M :set user-agent='Mozilla/5.0 (Linux; U; Android 2.3; en-us) AppleWebKit/999+ (KHTML, like Gecko) Safari/999.9'<CR> # Mobile UA
+nnoremap M :set user-agent='Mozilla/5.0 (Linux; U; Android 2.3; en-us) AppleWebKit/999+ (KHTML, like Gecko) Safari/999.9'<CR>
 
 # vimb behavior
 set hint-keys=fjdksla;
@@ -17,6 +17,7 @@ set input-autohide=true
 set home-page=https://www.archlinux.org/
 set spell-checking=true
 set webinspector=true
+set scroll-step=80
 
 # vimb theme
 set completion-css=font:xos4 Terminus; background-color: #282828; color: #ebdbb2
@@ -33,11 +34,13 @@ set minimum-font-size=15px
 
 # seach engines
 shortcut-default sp
-shortcut-add g=https://encrypted.google.com/search?q=$0
+shortcut-add g=https://www.google.com/search?q=$0
 shortcut-add fl=https://www.google.com/search?ie=UTF-8&oe=UTF-8&sourceid=navclient&gfns=1&q=$0
-shortcut-add gi=https://github.com/search?q=$0
+shortcut-add gh=https://github.com/search?q=$0
 shortcut-add ho=https://www.haskell.org/hoogle/?hoogle=$0
 shortcut-add sp=https://www.startpage.com/do/dsearch?query=$0
+shortcut-add dd=https://duckduckgo.com/lite/?q=$0
+shortcut-add aur=https://aur.archlinux.org/packages/?K=$0
 
 # hooks (not supported yet in vimb3)
-#au LoadFinished https://en.wikipedia.org/wiki/* eval! wiki_language_filter()
+au LoadFinished https://en.wikipedia.org/wiki/* eval! wiki_language_filter()
