--- a/st/PKGBUILD
+++ b/st/PKGBUILD
@@ -1,6 +1,6 @@
 pkgname=st-git
 _pkgname=st
-pkgver=0.7.17.gc63a87c
+pkgver=0.7.37.gb1338e9
 pkgrel=1
 pkgdesc='Simple virtual terminal emulator for X'
 url='http://st.suckless.org/'
@@ -12,9 +12,9 @@ makedepends=('ncurses' 'libxext' 'git')
 epoch=1
 # include config.h and any patches you want to have applied here
 source=(
-	'git://git.suckless.org/st#commit=c63a87c'
-	'colors.diff'
+	'git://git.suckless.org/st#commit=b1338e9'
 	'scrollback.diff'
+	'colors.diff'
 )
 sha1sums=(
 	'SKIP'
@@ -50,7 +50,9 @@ prepare() {
 		-e '/char font/s/= .*/= "xos4 Terminus:size=12:antialias=false";/' \
 		-e '/char worddelimiters/s/= .*/= " '"'"'`\\\"()[]{}<>|";/' \
 		-e '/int defaultcs/s/= .*/= 7;/' \
-		-e '/int borderpx/s/= .*/= 1;/' \
+		-e '/int borderpx/s/= .*/= 4;/' \
+		-e '/int xfps/s/= .*/= 240;/' \
+		-e '/int actionfps/s/= .*/= 120;/' \
 		-i config.def.h
 	#sed \
 	#	-e 's/CPPFLAGS =/CPPFLAGS +=/g' \
@@ -71,10 +73,8 @@ build() {
 	make X11INC=/usr/include/X11 X11LIB=/usr/lib/X11
 }
 
+
 package() {
 	cd "${_pkgname}"
 	make PREFIX=/usr DESTDIR="${pkgdir}" install
-	# I know where to find those
-	#install -Dm644 LICENSE "${pkgdir}/usr/share/licenses/${pkgname}/LICENSE"
-	#install -Dm644 README "${pkgdir}/usr/share/doc/${pkgname}/README"
 }
