git: highlight diffs in lines

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -24,6 +24,7 @@
 
 [core]
 	excludesfile = ~/.gitignore
+	pager = /usr/share/git/diff-highlight/diff-highlight | less -rx1,4
 
 [merge]
 	tool = meld
