--- a/teeworlds/.teeworlds/settings.cfg
+++ b/teeworlds/.teeworlds/settings.cfg
@@ -24,7 +24,7 @@ player_color_feet 16711680
 player_skin "nightmare2"
 ui_page 6
 ui_toolbox_page 0
-ui_server_address "149.202.127.138:8303"
+ui_server_address "localhost:8303"
 ui_scale 100
 ui_mousesens 100
 ui_color_hue 160
