--- a/fontconfig/.config/fontconfig/fonts.conf
+++ b/fontconfig/.config/fontconfig/fonts.conf
@@ -17,6 +17,6 @@
 	</alias>
 	<alias>
 		<family>monospace</family>
-		<prefer><family>Source Code Pro</family></prefer>
+		<prefer><family>DejaVu Sans Mono</family></prefer>
 	</alias>
 </fontconfig>
