git: remove useless dash in log graph

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -9,7 +9,7 @@
 	st = status --short --branch
 	br = branch
 	d = diff
-	lg = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr)%Creset %Cblue(%an)%Creset' --abbrev-commit --date=relative
+	lg = log --graph --pretty=format:'%Cred%h%Creset%C(yellow)%d%Creset %s %Cgreen(%cr)%Creset %Cblue(%an)%Creset' --abbrev-commit --date=relative
 	oops = reset --soft HEAD^1
 	grep = grep -n
 	pp = !sh -c 'git pull && git push'
