--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -10,6 +10,7 @@
 	br = branch
 	d = diff
 	lg = log --graph --pretty=format:'%Cred%h%Creset%C(yellow)%d%Creset %s %Cgreen(%cr)%Creset %Cblue(%an)%Creset' --abbrev-commit --date=relative
+	l = log --graph --pretty=format:'%Cred%h%Creset%C(yellow)%d%Creset %s %Cgreen(%cr)%Creset %Cblue(%an)%Creset' --abbrev-commit --date=relative -10
 	oops = reset --soft HEAD^1
 	grep = grep -n
 	pp = !sh -c 'git pull && git push'
